<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/nav_home"
            android:title="@string/e_nav_home" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/nav_history"
            android:title="@string/e_nav_my_requests" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/nav_profile"
            android:title="@string/e_nav_my_profile" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/nav_notifications"
            android:title="@string/e_nav_notifications" />
        <item
            android:id="@+id/nav_language"
            android:icon="@drawable/nav_language"
            android:title="@string/e_nav_languages" />
    </group>

</menu>