<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/fragment_boarder_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/e_label_sign_in_msg"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/splashImageView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/e_splash_img" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <!--<com.facebook.login.widget.LoginButton
                android:id="@+id/facebook_login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />-->

            <RelativeLayout
                android:id="@+id/login_with_facebook_view"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/style_corner_rounded_background_facebook_blue">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/fragment_boarder_padding"
                    android:text="@string/auth_label_home_facebook_login"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/fragment_boarder_padding" />
            </RelativeLayout>
        </FrameLayout>

        <RelativeLayout
            android:id="@+id/login_with_google_view"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/style_corner_rounded_background_google_blue">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/fragment_boarder_padding"
                android:text="@string/auth_label_home_google_login"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/fragment_boarder_padding" />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>
