<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:visibility="visible"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/english_relative_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:text="@string/e_label_english"
                android:textStyle="bold|italic"
                android:textSize="18sp"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"/>

            <ImageView
                android:src="@drawable/e_done_icon_b"
                android:id="@+id/englishTickIcon"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="10dp"/>
        </RelativeLayout>

        <TextView
            android:background="@color/grey"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <RelativeLayout
            android:id="@+id/sinhala_relative_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:text="@string/e_label_sinhala"
                android:textStyle="bold|italic"
                android:textSize="18sp"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"/>

            <ImageView
                android:src="@drawable/e_done_icon_b"
                android:id="@+id/sinhalaTickIcon"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="10dp"/>
        </RelativeLayout>

        <TextView
            android:background="@color/grey"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <RelativeLayout
            android:id="@+id/tamil_relative_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:text="@string/e_label_tamil"
                android:textStyle="bold|italic"
                android:textSize="18sp"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"/>

            <ImageView
                android:src="@drawable/e_done_icon_b"
                android:id="@+id/tamilTickIcon"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="10dp"/>
        </RelativeLayout>

        <TextView
            android:background="@color/grey"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

    </LinearLayout>

</LinearLayout>